tests/invalid/01_missing_paren.js
// 错误1: 缺少右括号
function test(a, b {
    return a + b;
}
